<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TennisStatTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_screen_text">Title Screen Text</string>
    <string name="action_rules">How to Play</string>
    <string name="action_scoreboard">Score Keeper</string>
    <string name="action_stat_tracker">Stat Tracker</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_score_board">ScoreBoard</string>
    <string name="title_activity_stats">Stats</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_win">Won the Point</string>
    <string name="action_lose">Lost the Point</string>
    <string name="who_won_text">Who Won the Point?</string>
    <string name="game_score_text">Current Game Score:</string>
    <string name="settings_mute">Mute App Volume</string>
    <string name="action_enter">Enter</string>
    <string name="action_reset">Reset</string>

</resources>
