<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/title_screen_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/title_screen" 
        android:contentDescription="@string/title_screen_text"/>

    <Button
        android:id="@+id/rules_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_screen_text"
        android:layout_alignRight="@+id/title_screen_text"
        android:layout_centerVertical="true"
        android:text="@string/action_rules" />
    
    <Button
        android:id="@+id/score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_screen_text"
        android:layout_alignRight="@+id/title_screen_text"
        android:layout_below="@+id/rules_button"
        android:text="@string/action_scoreboard" />

    <Button
        android:id="@+id/stat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_screen_text"
        android:layout_alignRight="@+id/title_screen_text"
        android:layout_below="@+id/score_button"
        android:text="@string/action_stat_tracker" />

</RelativeLayout>
