<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScoreBoardActivity" >

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_scoreboard" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="19dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:text="Set: "
                android:textSize="15sp" />

            <TextView
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:text="1 "
                android:textSize="15sp" />

            <TextView
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:text="2 "
                android:textSize="15sp" />

            <TextView
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:text="3 "
                android:textSize="15sp" />

            <TextView
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:text="4 "
                android:textSize="15sp" />

            <TextView
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:text="5 "
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:text="You: "
                android:textSize="15sp" />

            <TextView
                android:id="@+id/you_set1"
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/you_set2"
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/you_set3"
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/you_set4"
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/you_set5"
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:text="Opponent: "
                android:textSize="15sp" />

            <TextView
                android:id="@+id/opp_set1"
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/opp_set2"
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/opp_set3"
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/opp_set4"
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/opp_set5"
                android:layout_height="wrap_content"
                android:paddingRight="30dip"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:text="@string/who_won_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/win_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginTop="39dp"
        android:text="@string/action_win" />

    <Button
        android:id="@+id/lose_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/win_button"
        android:layout_alignBottom="@+id/win_button"
        android:layout_alignRight="@+id/tableLayout1"
        android:text="@string/action_lose" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/game_score_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/you_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/win_button"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="30dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/opp_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/you_game"
        android:layout_alignBottom="@+id/you_game"
        android:layout_alignLeft="@+id/lose_button"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/opp_game"
        android:layout_centerHorizontal="true"
        android:text="You:Opp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settingsTitle"
        android:layout_below="@+id/win_button"
        android:layout_marginTop="26dp"
        android:text="How many sets? 1, 3, or 5: "
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/action_enter" />

</RelativeLayout>